2000-08-01-21:20 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
*contrib/hbzlib/zipfile2.c
    %some enhacements and fixed a bug inside hb___GetFilesNamesFromZip
*contrib/hbzlib/zipfile.c
 contrib/hbzlib/zlibapi1.c
    *Fixed a Bug reported by Patrick Mast    
-doc/idle.txt
+doc/en/idle.txt
    *Moved to the en/ directory
    *Description of IDLE stated became a topic also
*doc/genhtm.rsp
   +en/idle.txt
   -en/hb*.txt Removed all api entries file names
*doc/en/garbage.txt
   *small formating 
*utils/hbdoc/genng.prg
   *Fixed an small bug
*makefile.bc
 hb_slex.bc
  + .autodepend macro added

20000801-21:55 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * config/os2/global.cf
     ! fixed removing of nested subdir (HB_ARCHITECTURE/HB_COMPILER) that under OS/2 you need to
       remove from the bottom up and not a single DEL command
   * source/compiler/cmdcheck.c
     ! removed GCC warning since isdigit() expects an int but was called with a char

2000-08-01 12:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/cmdcheck.c
     + Added support for "new style" switches specs, for command line arguments.

     /* Note: */ I did *not* implement same for the Environment Variables parsing.

2000-08-01 21:10 UTC+0100 Victor Szakats <info@szelvesz.hu>

   + doc/cmdline.txt
     + Command line handling spec added.

2000-08-01 21:03 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/common/hbver.c
     + Added CPP info to the build info page.
     + Added 16bit vs 32bit to the Borland compiler info.

20000801-19:28 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/common/hbver.c
     ! fixed sprintf() warnings for OS/2 and removed revision number since it is always 0.

2000-08-01 18:20 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbapi.h
        * modified HB_MACRO structure

    *source/macro/macro.l
        * optimized support for array index

    *source/compiler/harbour.c
    *source/compiler/harbour.y